libpurple/conversation.h

typedef struct _PurpleConversation      PurpleConversation;
typedef struct _PurpleConvIm            PurpleConvIm;
typedef struct _PurpleConvChat          PurpleConvChat;
typedef struct _PurpleConvMessage       PurpleConvMessage;
typedef enum
{
	PURPLE_NOT_TYPING = 0,  
	PURPLE_TYPING,          
	PURPLE_TYPED            
} PurpleTypingState;
typedef enum
{
	PURPLE_MESSAGE_SEND        = 0x0001, 
	PURPLE_MESSAGE_RECV        = 0x0002, 
	PURPLE_MESSAGE_SYSTEM      = 0x0004, 
	PURPLE_MESSAGE_AUTO_RESP   = 0x0008, 
	PURPLE_MESSAGE_ACTIVE_ONLY = 0x0010,  
	PURPLE_MESSAGE_NICK        = 0x0020, 
	PURPLE_MESSAGE_NO_LOG      = 0x0040, 
	PURPLE_MESSAGE_WHISPER     = 0x0080, 
	PURPLE_MESSAGE_ERROR       = 0x0200, 
	PURPLE_MESSAGE_DELAYED     = 0x0400, 
	PURPLE_MESSAGE_RAW         = 0x0800, 
	PURPLE_MESSAGE_IMAGES      = 0x1000, 
	PURPLE_MESSAGE_NOTIFY      = 0x2000, 
	PURPLE_MESSAGE_NO_LINKIFY  = 0x4000, 
	PURPLE_MESSAGE_INVISIBLE   = 0x8000, 
} PurpleMessageFlags;
struct _PurpleConvIm
{
	PurpleConversation *conv;            
	PurpleTypingState typing_state;      
	guint  typing_timeout;             
	time_t type_again;                 
	guint  send_typed_timeout;         
	PurpleBuddyIcon *icon;               
};
struct _PurpleConvChat
{
	PurpleConversation *conv;          
	GList *in_room;                  
	GList *ignored;                  
	char  *who;                      
	char  *topic;                    
	int    id;                       
	char *nick;                      
	gboolean left;                   
};
struct _PurpleConvMessage
{
	char *who;
	char *what;
	PurpleMessageFlags flags;
	time_t when;
};
struct _PurpleConversation
{
	PurpleConversationType type;  
	PurpleAccount *account;       
	char *name;                 
	char *title;                
	gboolean logging;           
	GList *logs;                
	union
	{
		PurpleConvIm   *im;       
		PurpleConvChat *chat;     
		void *misc;             
	} u;
	PurpleConversationUiOps *ui_ops;           
	void *ui_data;                           
	GHashTable *data;                        
	PurpleConnectionFlags features; 
};
void purple_conversation_close_logs(PurpleConversation *conv, void (*cb) (void *), void *data);
void purple_conversation_foreach(void (*func)(PurpleConversation *conv));
GList *purple_conversation_get_message_history(PurpleConversation *conv);
void purple_conversation_clear_message_history(PurpleConversation *conv);
const char *purple_conversation_message_get_sender(PurpleConvMessage *msg);
const char *purple_conversation_message_get_message(PurpleConvMessage *msg);
PurpleMessageFlags purple_conversation_message_get_flags(PurpleConvMessage *msg);
time_t purple_conversation_message_get_timestamp(PurpleConvMessage *msg);
PurpleConversation *purple_conv_im_get_conversation(const PurpleConvIm *im);
void purple_conv_im_set_icon(PurpleConvIm *im, PurpleBuddyIcon *icon);
PurpleBuddyIcon *purple_conv_im_get_icon(const PurpleConvIm *im);
void purple_conv_im_set_typing_state(PurpleConvIm *im, PurpleTypingState state);
PurpleTypingState purple_conv_im_get_typing_state(const PurpleConvIm *im);
void purple_conv_im_start_typing_timeout(PurpleConvIm *im, int timeout);
void purple_conv_im_stop_typing_timeout(PurpleConvIm *im);
guint purple_conv_im_get_typing_timeout(const PurpleConvIm *im);
void purple_conv_im_set_type_again(PurpleConvIm *im, unsigned int val);
time_t purple_conv_im_get_type_again(const PurpleConvIm *im);
void purple_conv_im_start_send_typed_timeout(PurpleConvIm *im);
void purple_conv_im_stop_send_typed_timeout(PurpleConvIm *im);
guint purple_conv_im_get_send_typed_timeout(const PurpleConvIm *im);
void purple_conv_im_update_typing(PurpleConvIm *im);
void purple_conv_im_write(PurpleConvIm *im, const char *who,
						const char *message, PurpleMessageFlags flags,
						time_t mtime);
gboolean purple_conv_present_error(const char *who, PurpleAccount *account, const char *what);
void purple_conv_im_send(PurpleConvIm *im, const char *message);
void purple_conv_send_confirm(PurpleConversation *conv, const char *message);
void purple_conv_im_send_with_flags(PurpleConvIm *im, const char *message, PurpleMessageFlags flags);
gboolean purple_conv_custom_smiley_add(PurpleConversation *conv, const char *smile,
                                      const char *cksum_type, const char *chksum,
									  gboolean remote);
void purple_conv_custom_smiley_write(PurpleConversation *conv,
                                   const char *smile,
                                   const guchar *data,
                                   gsize size);
void purple_conv_custom_smiley_close(PurpleConversation *conv, const char *smile);
PurpleConversation *purple_conv_chat_get_conversation(const PurpleConvChat *chat);
GList *purple_conv_chat_set_users(PurpleConvChat *chat, GList *users);
GList *purple_conv_chat_get_users(const PurpleConvChat *chat);
void purple_conv_chat_ignore(PurpleConvChat *chat, const char *name);
void purple_conv_chat_unignore(PurpleConvChat *chat, const char *name);
GList *purple_conv_chat_set_ignored(PurpleConvChat *chat, GList *ignored);