libpurple/wrapper/Conversation.cs


		/*
		 * void purple_conversation_foreach( )
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_foreach(UNKNOWN );

		public static void Foreach( )
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_conversation_get_message_history(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_message_history(IntPtr conv);

		public static GList GetMessageHistory(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_clear_message_history(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_clear_message_history(IntPtr conv);

		public static void ClearMessageHistory(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conversation_message_get_sender(PurpleConvMessage * msg)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conversation_message_get_sender(IntPtr msg);

		public static string MessageGetSender(PurpleConvMessage msg)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conversation_message_get_message(PurpleConvMessage * msg)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conversation_message_get_message(IntPtr msg);

		public static string MessageGetMessage(PurpleConvMessage msg)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleMessageFlags purple_conversation_message_get_flags(PurpleConvMessage * msg)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conversation_message_get_flags(IntPtr msg);

		public static PurpleMessageFlags MessageGetFlags(PurpleConvMessage msg)
		{
			throw new NotImplementedException();
		}

		/*
		 * time_t purple_conversation_message_get_timestamp(PurpleConvMessage * msg)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conversation_message_get_timestamp(IntPtr msg);

		public static time_t MessageGetTimestamp(PurpleConvMessage msg)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConversation * purple_conv_im_get_conversation(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_im_get_conversation(IntPtr im);

		public static PurpleConversation ConvImGetConversation(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_set_icon(PurpleConvIm * im, PurpleBuddyIcon * icon)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_set_icon(IntPtr im, IntPtr icon);

		public static void ConvImSetIcon(PurpleConvIm im, PurpleBuddyIcon icon)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleBuddyIcon * purple_conv_im_get_icon(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_im_get_icon(IntPtr im);

		public static PurpleBuddyIcon ConvImGetIcon(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_set_typing_state(PurpleConvIm * im, PurpleTypingState state)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_set_typing_state(IntPtr im, UNKNOWN state);

		public static void ConvImSetTypingState(PurpleConvIm im, PurpleTypingState state)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleTypingState purple_conv_im_get_typing_state(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conv_im_get_typing_state(IntPtr im);

		public static PurpleTypingState ConvImGetTypingState(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_start_typing_timeout(PurpleConvIm * im, int timeout)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_start_typing_timeout(IntPtr im, int timeout);

		public static void ConvImStartTypingTimeout(PurpleConvIm im, int timeout)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_stop_typing_timeout(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_stop_typing_timeout(IntPtr im);

		public static void ConvImStopTypingTimeout(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * guint purple_conv_im_get_typing_timeout(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern uint purple_conv_im_get_typing_timeout(IntPtr im);

		public static uint ConvImGetTypingTimeout(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_set_type_again(PurpleConvIm * im, unsigned int)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_set_type_again(IntPtr im, UNKNOWN int);

		public static void ConvImSetTypeAgain(PurpleConvIm im, unsigned int)
		{
			throw new NotImplementedException();
		}

		/*
		 * time_t purple_conv_im_get_type_again(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conv_im_get_type_again(IntPtr im);

		public static time_t ConvImGetTypeAgain(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_start_send_typed_timeout(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_start_send_typed_timeout(IntPtr im);

		public static void ConvImStartSendTypedTimeout(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_stop_send_typed_timeout(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_stop_send_typed_timeout(IntPtr im);

		public static void ConvImStopSendTypedTimeout(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * guint purple_conv_im_get_send_typed_timeout(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern uint purple_conv_im_get_send_typed_timeout(IntPtr im);

		public static uint ConvImGetSendTypedTimeout(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_update_typing(PurpleConvIm * im)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_update_typing(IntPtr im);

		public static void ConvImUpdateTyping(PurpleConvIm im)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_write(PurpleConvIm * im, char * who, char * message, PurpleMessageFlags flags, time_t mtime)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_write(IntPtr im, string who, string message, UNKNOWN flags, UNKNOWN mtime);

		public static void ConvImWrite(PurpleConvIm im, string who, string message, PurpleMessageFlags flags, time_t mtime)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conv_present_error(char * who, PurpleAccount * account, char * what)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conv_present_error(string who, IntPtr account, string what);

		public static bool ConvPresentError(string who, PurpleAccount account, string what)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_send(PurpleConvIm * im, char * message)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_send(IntPtr im, string message);

		public static void ConvImSend(PurpleConvIm im, string message)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_send_confirm(PurpleConversation * conv, char * message)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_send_confirm(IntPtr conv, string message);

		public static void ConvSendConfirm(PurpleConversation conv, string message)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_im_send_with_flags(PurpleConvIm * im, char * message, PurpleMessageFlags flags)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_im_send_with_flags(IntPtr im, string message, UNKNOWN flags);

		public static void ConvImSendWithFlags(PurpleConvIm im, string message, PurpleMessageFlags flags)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conv_custom_smiley_add(PurpleConversation * conv, char * smile, char * cksum_type, char * chksum, gboolean remote)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conv_custom_smiley_add(IntPtr conv, string smile, string cksum_type, string chksum, bool remote);

		public static bool ConvCustomSmileyAdd(PurpleConversation conv, string smile, string cksum_type, string chksum, bool remote)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_custom_smiley_write(PurpleConversation * conv, char * smile, guchar * data, gsize size)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_custom_smiley_write(IntPtr conv, string smile, IntPtr data, UNKNOWN size);

		public static void ConvCustomSmileyWrite(PurpleConversation conv, string smile, guchar data, gsize size)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_custom_smiley_close(PurpleConversation * conv, char * smile)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_custom_smiley_close(IntPtr conv, string smile);

		public static void ConvCustomSmileyClose(PurpleConversation conv, string smile)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConversation * purple_conv_chat_get_conversation(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_get_conversation(IntPtr chat);

		public static PurpleConversation ConvChatGetConversation(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_conv_chat_set_users(PurpleConvChat * chat, GList * users)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_set_users(IntPtr chat, IntPtr users);

		public static GList ConvChatSetUsers(PurpleConvChat chat, GList users)
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_conv_chat_get_users(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_get_users(IntPtr chat);

		public static GList ConvChatGetUsers(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_ignore(PurpleConvChat * chat, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_ignore(IntPtr chat, string name);

		public static void ConvChatIgnore(PurpleConvChat chat, string name)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_unignore(PurpleConvChat * chat, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_unignore(IntPtr chat, string name);

		public static void ConvChatUnignore(PurpleConvChat chat, string name)
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_conv_chat_set_ignored(PurpleConvChat * chat, GList * ignored)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_set_ignored(IntPtr chat, IntPtr ignored);

		public static GList ConvChatSetIgnored(PurpleConvChat chat, GList ignored)
		{
			throw new NotImplementedException();
		}
